--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,40 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>FasTyper</title>
 </head>
-<body class="bg-dark text-white">
-    <header class="bg-secondary text-center p-3 mb-5">
-        <h1>FasTyper</h1>
-    </header>
+<body class="bg-info text-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">FasTyper</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sign Out</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
+
 
     <div class="container text-center">
         <!-- Input -->
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <p class="lead">Type the word in  <span class="seconds">5</span> seconds</p>
-                <h2 class="display-2 mb-5" id="current-word">hello!</h2>
+                <p class="lead">Type the word below in  <span class="seconds">5</span> seconds</p>
+                <h2 class="display-2 mb-5" id="current-word">Hello</h2>
                 <input type="text" class="form-control form-control-lg" placeholder="Start.." id="word-input" autofocus>
+                <div class="alert" style="display: none;">
                 <h4 class="mt-3" id=message></h4>
-
+                <h4 class="mt-3" id=final-score></h4>
+                <button>Play Again?</button>
+                </div>
             </div>
         </div>
 
@@ -39,6 +59,20 @@
             </div>
         </div>
     </div>
+
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-analytics.js"></script>
+    <script src="/src/js/auth.js"></script>
     <script src="/src/js/main.js"></script>
 </body>
 </html>
