--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>FasTyper</title>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="226177566241-akg2ufp8euueesbcb1uj2vmm38rvsnv4.apps.googleusercontent.com">
+        <title>FasTyper</title>
 </head>
 <body class="bg-info text-white">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -20,7 +22,8 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                <!-- <a class="nav-link" href="#">Login</a> -->
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Sign Out</a>
@@ -31,6 +34,13 @@
 
 
     <div class="container text-center">
+        <div class="row">
+            <div class="col-md" id="user-name">
+
+            </div>
+
+        </div>
+
         <!-- Input -->
         <div class="row">
             <div class="col-md-6 mx-auto">
