--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="226177566241-akg2ufp8euueesbcb1uj2vmm38rvsnv4.apps.googleusercontent.com">
-        <title>FasTyper</title>
+    <link rel="stylesheet" href="styles.css"> 
+    <title>FasTyper</title>
 </head>
-<body class="bg-info text-white">
+<body class="main-container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">FasTyper</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +27,7 @@
                 <!-- <a class="nav-link" href="#">Login</a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign Out</a>
+                <a class="nav-link" href="#" onclick="signOut();" >Sign Out</a>
             </li>
             </ul>
         </div>
@@ -44,13 +45,20 @@
         <!-- Input -->
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <p class="lead">Type the word below in  <span class="seconds">5</span> seconds</p>
+                <p class="lead">Type the words displayed in  <span class="seconds">5</span> seconds</p>
+                <div class="d-flex justify-content-center">
+                <button id="play" onClick="init();">Start Game?</button>
+                 </div>
                 <h2 class="display-2 mb-5" id="current-word">Hello</h2>
+        
                 <input type="text" class="form-control form-control-lg" placeholder="Start.." id="word-input" autofocus>
                 <div class="alert" style="display: none;">
                 <h4 class="mt-3" id=message></h4>
                 <h4 class="mt-3" id=final-score></h4>
-                <button>Play Again?</button>
+                <div class="view-score">
+                <button onclick="showMaxScore();">Submit score</button>
+                </div>
+                <button id="play" onClick="window.location.reload();">Play Again?</button>
                 </div>
             </div>
         </div>
@@ -70,6 +78,10 @@
         </div>
     </div>
 
+
+
+
+     
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
