--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <div class="g-signin2" data-onsuccess="onSignIn"></div>
-                <!-- <a class="nav-link" href="#">Login</a> -->
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" onclick="signOut();" >Sign Out</a>
             </li>
@@ -35,8 +28,21 @@
 
 
     <div class="container text-center">
+        <div class="row mt-3 mb-3">
+            <div class="col-md-6 mx-auto">
+                To play this is a game, a word is displayed and you have to type
+                it in the textbox, you have 5 seconds. You can play the game as many times as you
+                want but remember to sign in if you want to submit a score.
+            </div>
+
+        </div>
+                    <div class="col mb-3">
+                <div class="d-flex justify-content-center">
+                    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                 </div>
+            </div>
         <div class="row">
-            <div class="col-md" id="user-name">
+            <div class="col-md mb-2" id="user-name">
 
             </div>
 
@@ -45,20 +51,21 @@
         <!-- Input -->
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <p class="lead">Type the words displayed in  <span class="seconds">5</span> seconds</p>
                 <div class="d-flex justify-content-center">
                 <button id="play" onClick="init();">Start Game?</button>
                  </div>
-                <h2 class="display-2 mb-5" id="current-word">Hello</h2>
+                 <h6>You can also press control + s to start game</h6>
+                <h2 class="display-2 mb-5" id="current-word">Ready?</h2>
         
                 <input type="text" class="form-control form-control-lg" placeholder="Start.." id="word-input" autofocus>
                 <div class="alert" style="display: none;">
                 <h4 class="mt-3" id=message></h4>
                 <h4 class="mt-3" id=final-score></h4>
                 <div class="view-score">
-                <button onclick="showMaxScore();">Submit score</button>
+                <button onclick="submitMaxScore();">Submit score</button>
+                <div id="submit-success"></div>
                 </div>
-                <button id="play" onClick="window.location.reload();">Play Again?</button>
+                <button id="play" onClick="window.location.reload();">Reset Game</button>
                 </div>
             </div>
         </div>
