--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,12 @@
                 <button id="play" onClick="init();">Start Game?</button>
                  </div>
                  <h6>You can also press control + s to start game</h6>
-                <h2 class="display-2 mb-5" id="current-word">Ready?</h2>
+                 <div class="col-md-10 mx-auto">
+                        <h1 style="background-color: #fafafa; color: #862fde;" id="current-word"></h1>
+                 </div>
+                
         
-                <input type="text" class="form-control form-control-lg" placeholder="Start.." id="word-input" autofocus>
+                <input type="text" class="form-control form-control-lg" placeholder="Wait..." id="word-input" autofocus>
                 <div class="alert" style="display: none;">
                 <h4 class="mt-3" id=message></h4>
                 <h4 class="mt-3" id=final-score></h4>
@@ -103,5 +106,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-analytics.js"></script>
     <script src="/src/js/auth.js"></script>
     <script src="/src/js/main.js"></script>
+   
 </body>
 </html>
